// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test select example 1`] = `
"<div class="app-type">标准外观</div>
<div class="var-space var--box" style="flex-direction: column; justify-content: flex-start; flex-wrap: wrap;">
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__dot"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">文本关联值</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__dot"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="relation">当前选择的是: </div>
  </div>
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard">
          <div class="var-field-decorator__controller">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">只读</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__dot"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard var-field-decorator--disabled">
          <div class="var-field-decorator__controller var-field-decorator--disabled">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select var-select--disabled" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--disabled" for="">禁用</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line var-field-decorator--line-disabled">
            <div class="var-field-decorator__dot var-field-decorator--line-disabled"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">可清除</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__dot"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-github prepend-icon" style="transition-duration: 0ms;"></i></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-chevron-down" style="transition-duration: 300ms;"></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">自定义图标</label>
            </div>
            <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-github append-icon" style="transition-duration: 0ms;"></i></div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__dot"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">多选</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__dot"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">纸片风格的多选</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__dot"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 3vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">单选值校验</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__dot"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--standard">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">多选值校验</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__dot"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
</div>
<div class="app-type" style="margin-top: 10vw;">外边框外观</div>
<div class="var-space var--box" style="flex-direction: column; justify-content: flex-start; flex-wrap: wrap;">
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__line-start"></div>
            <div class="var-field-decorator__line-notch">
              <div class="var-field-decorator__line-placeholder var--ellipsis">请选择一个选项</div>
            </div>
            <div class="var-field-decorator__line-end"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">文本关联值</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__line-start"></div>
            <div class="var-field-decorator__line-notch">
              <div class="var-field-decorator__line-placeholder var--ellipsis">文本关联值</div>
            </div>
            <div class="var-field-decorator__line-end"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="relation">当前选择的是: </div>
  </div>
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined">
          <div class="var-field-decorator__controller">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">只读</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__line-start"></div>
            <div class="var-field-decorator__line-notch">
              <div class="var-field-decorator__line-placeholder var--ellipsis">只读</div>
            </div>
            <div class="var-field-decorator__line-end"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined var-field-decorator--disabled">
          <div class="var-field-decorator__controller var-field-decorator--disabled">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select var-select--disabled" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--disabled" for="">禁用</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line var-field-decorator--line-disabled">
            <!--v-if-->
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">可清除</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__line-start"></div>
            <div class="var-field-decorator__line-notch">
              <div class="var-field-decorator__line-placeholder var--ellipsis">可清除</div>
            </div>
            <div class="var-field-decorator__line-end"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-github prepend-icon" style="transition-duration: 0ms;"></i></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-chevron-down" style="transition-duration: 300ms;"></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">自定义图标</label>
            </div>
            <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-github append-icon" style="transition-duration: 0ms;"></i></div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__line-start"></div>
            <div class="var-field-decorator__line-notch">
              <div class="var-field-decorator__line-placeholder var--ellipsis">自定义图标</div>
            </div>
            <div class="var-field-decorator__line-end"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">多选</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__line-start"></div>
            <div class="var-field-decorator__line-notch">
              <div class="var-field-decorator__line-placeholder var--ellipsis">多选</div>
            </div>
            <div class="var-field-decorator__line-end"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">纸片风格的多选</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__line-start"></div>
            <div class="var-field-decorator__line-notch">
              <div class="var-field-decorator__line-placeholder var--ellipsis">纸片风格的多选</div>
            </div>
            <div class="var-field-decorator__line-end"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px 0px 6vw 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">单选值校验</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__line-start"></div>
            <div class="var-field-decorator__line-notch">
              <div class="var-field-decorator__line-placeholder var--ellipsis">单选值校验</div>
            </div>
            <div class="var-field-decorator__line-end"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <div style="margin: 0px;">
    <div class="var-select">
      <div class="var-menu var-select__menu" var-select-cover="">
        <div class="var-field-decorator var--box var-field-decorator--outlined">
          <div class="var-field-decorator__controller" style="cursor: pointer;">
            <div class="var-field-decorator__icon"></div>
            <div class="var-field-decorator__wrap">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div><label class="var-field-decorator__placeholder var--ellipsis" for="">多选值校验</label>
            </div>
            <div class="var-field-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-field-decorator__line">
            <div class="var-field-decorator__line-start"></div>
            <div class="var-field-decorator__line-notch">
              <div class="var-field-decorator__line-placeholder var--ellipsis">多选值校验</div>
            </div>
            <div class="var-field-decorator__line-end"></div>
          </div>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
</div>
<div class="space"></div>"
`;

exports[`test select focus & blur methods 1`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller var-field-decorator--focus" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow var-select--arrow-rotate" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--focus var-field-decorator--placeholder-hint" for="" style="transform: translate(-0, 0);"></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot var-field-decorator--line-focus"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select focus & blur methods 2`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="" style=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select hint to be false 1`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon var-field-decorator--non-hint"></div>
        <div class="var-field-decorator__wrap var-field-decorator--wrap-non-hint">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label"><span></span></div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--placeholder-non-hint var-field-decorator--placeholder-hidden" for=""></label>
        </div>
        <div class="var-field-decorator__icon var-field-decorator--non-hint">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select size 1`] = `
"<div class="var-select" value="">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard var-field-decorator--small">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select validation 1`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller var-field-decorator--error" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select var-select--error" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--error" for=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line var-field-decorator--line-error">
        <div class="var-field-decorator__dot var-field-decorator--line-error"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>您必须选择一个</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test select variant 1`] = `
"<div class="var-select" value="">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select variant 2`] = `
"<div class="var-select" value="">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--outlined">
      <div class="var-field-decorator__controller" style="cursor: pointer;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__line-start"></div>
        <div class="var-field-decorator__line-notch">
          <div class="var-field-decorator__line-placeholder var--ellipsis"></div>
        </div>
        <div class="var-field-decorator__line-end"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
